Remove test html file and move design system code to spacing.html

--- a/design-system.html
+++ b/design-system.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spacing</title>
+  <title>Design System</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
   <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
@@ -74,153 +74,11 @@
 
 
   <!-- Spacing properties -->
-  <div class="design-system-content">
-    <section class="">
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>These div has a margin of 1rem on all sides.</p>
-        <p>Classes: l-m</p>
-        <div class="c-card l-flex">
-          <div class="c-card l-m ">A</div>
-          <div class="c-card l-m ">B</div>
-          <div class="c-card l-m ">C</div>
-        </div>
-      </div>
-
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>This div has a margin-top of 1rem.</p>
-        <p>Classes: l-mt-1</p>
-        <div class="c-card ">
-          <div class="c-card l-mt-1">A</div>
-          <div class="c-card l-mt-1">B</div>
-        </div>
-      </div>
-
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>This div has a margin-bottom of 1rem.</p>
-        <p>Classes: l-mb-1</p>
-        <div class="c-card ">
-          <div class="c-card l-mb-1">A</div>
-          <div class="c-card l-mb-1">B</div>
-        </div>
-      </div>
-
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>This div has a margin-right of 1rem.</p>
-        <p>Classes: l-mr-1</p>
-        <div class="c-card l-flex">
-          <div class="c-card l-mr-1">A</div>
-          <div class="c-card l-mr-1">B</div>
-          <div class="c-card l-mr-1">C</div>
-        </div>
-      </div>
-
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>This div has a margin-left of 1rem.</p>
-        <p>Classes: l-ml-1</p>
-        <div class="c-card l-flex">
-          <div class="c-card l-ml-1">A</div>
-          <div class="c-card l-ml-1">B</div>
-          <div class="c-card l-ml-1">C</div>
-        </div>
-      </div>
-
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>This div has a margin-left and margin-right of 1rem.</p>
-        <p>Classes: l-mx-1</p>
-        <div class="c-card l-flex">
-          <div class="c-card l-mx-1">A</div>
-          <div class="c-card l-mx-1">B</div>
-          <div class="c-card l-mx-1">C</div>
-        </div>
-      </div>
-
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>This div has a margin-top and margin-bottom of 1rem.</p>
-        <p>Classes: l-my-1</p>
-        <div class="c-card ">
-          <div class="c-card l-my-1">A</div>
-          <div class="c-card l-my-1">B</div>
-          <div class="c-card l-my-1">C</div>
-        </div>
-      </div>
-
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>This div has a padding of 1rem on all sides.</p>
-        <p>Classes: l-p</p>
-        <div class="c-card l-flex">
-          <div class="u-bg-secondary l-p">A</div>
-          <div class="u-bg-secondary l-p">B</div>
-          <div class="u-bg-secondary l-p">C</div>
-        </div>
-      </div>
-
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>This div has a padding-top of 1rem.</p>
-        <p>Classes: l-pt-1</p>
-        <div class="c-card ">
-          <div class="u-bg-secondary l-pt-1">A</div>
-          <div class="u-bg-secondary l-pt-1">B</div>
-          <div class="u-bg-secondary l-pt-1">C</div>
-        </div>
-      </div>
-
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>This div has a padding-bottom of 1rem.</p>
-        <p>Classes: l-pb-1</p>
-        <div class="c-card ">
-          <div class="u-bg-secondary l-pb-1">A</div>
-          <div class="u-bg-secondary l-pb-1">B</div>
-          <div class="u-bg-secondary l-pb-1">C</div>
-        </div>
-      </div>
-
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>This div has a padding-right of 1rem.</p>
-        <p>Classes: l-pr-1</p>
-        <div class="c-card l-flex">
-          <div class="u-bg-secondary l-pr-1">A</div>
-          <div class="u-bg-secondary l-pr-1">B</div>
-          <div class="u-bg-secondary l-pr-1">C</div>
-        </div>
-      </div>
-
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>This div has a padding-left of 1rem.</p>
-        <p>Classes: l-pl-1</p>
-        <div class="c-card l-flex">
-          <div class="u-bg-secondary l-pl-1">A</div>
-          <div class="u-bg-secondary l-pl-1">B</div>
-          <div class="u-bg-secondary l-pl-1">C</div>
-        </div>
-      </div>
-
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>This div has a padding-left and padding-right of 1rem.</p>
-        <p>Classes: l-px-1</p>
-        <div class="c-card l-flex">
-          <div class="u-bg-secondary l-px-1">A</div>
-          <div class="u-bg-secondary l-px-1">B</div>
-          <div class="u-bg-secondary l-px-1">C</div>
-        </div>
-      </div>
-
-      <div class="c-card l-flex-col l-flex l-justify-center l-m l-align-center u-bg-primary u-body-text u-text-primary">
-        <p>This div has a padding-top and padding-bottom of 1rem.</p>
-        <p>Classes: l-py-1</p>
-        <div class="c-card ">
-          <div class="u-bg-secondary l-py-1">A</div>
-          <div class="u-bg-secondary l-py-1">B</div>
-          <div class="u-bg-secondary l-py-1">C</div>
-        </div>
-      </div>
-
-    </section>
-
-
+  <div class="design-system-content u-bg-secondary">
 
   </div>
 
-  <script src="./app.js"></script>
+  <script src="./design-system.js"></script>
 </body>
 
 </html>
