--- a/design-system.html
+++ b/design-system.html
@@ -36,39 +36,39 @@
     <ul class="sidebar_item">
       <li><a class="u-text-primary u-body-text" href="colors.html">01 Colours</a></li>
       <li><a class="u-text-primary u-body-text" href="typography.html">02 Typography</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">03 Logo</a></li>
+      <li><a class="u-text-primary u-body-text" href="logo.html">03 Logo</a></li>
     </ul>
 
     <h2 class="sidebar_item u-text-secondary u-heading">Utilities</h2>
     <ul class="sidebar_item">
       <li><a class="u-text-primary u-body-text active-page" href="spacing.html">04 Spacing</a></li>
       <li><a class="u-text-primary u-body-text" href="containers.html">05 Containers</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">06 Images</a></li>
+      <li><a class="u-text-primary u-body-text" href="images.html">06 Images</a></li>
       <li><a class="u-text-primary u-body-text" href="#">07 Interactive</a></li>
       <li><a class="u-text-primary u-body-text" href="#">08 Pages</a></li>
     </ul>
 
     <h2 class="sidebar_item u-text-secondary u-heading">Navigation</h2>
     <ul class="sidebar_item">
-      <li><a class="u-text-primary u-body-text" href="#">09 Navbar</a></li>
+      <li><a class="u-text-primary u-body-text" href="navbar.html">09 Navbar</a></li>
       <li><a class="u-text-primary u-body-text" href="#">10 Breadcrumbs</a></li>
       <li><a class="u-text-primary u-body-text" href="#">11 Pagination</a></li>
     </ul>
 
     <h2 class="sidebar_item u-text-secondary u-heading">Blocks</h2>
     <ul class="sidebar_item">
-      <li><a class="u-text-primary u-body-text" href="#">12 Hero</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">13 Carousel</a></li>
+      <li><a class="u-text-primary u-body-text" href="hero.html">12 Hero</a></li>
+      <li><a class="u-text-primary u-body-text" href="carousel.html">13 Carousel</a></li>
       <li><a class="u-text-primary u-body-text" href="#">14 Slats</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">15 Footer</a></li>
+      <li><a class="u-text-primary u-body-text" href="footer.html">15 Footer</a></li>
     </ul>
 
     <h2 class="sidebar_item u-text-secondary u-heading">Components</h2>
     <ul class="sidebar_item">
-      <li><a class="u-text-primary u-body-text" href="#">16 Cards</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">17 Forms</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">18 Accordion</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">19 Lists</a></li>
+      <li><a class="u-text-primary u-body-text" href="cards.html">16 Cards</a></li>
+      <li><a class="u-text-primary u-body-text" href="footer.html">17 Forms</a></li>
+      <li><a class="u-text-primary u-body-text" href="accordin.html">18 Accordion</a></li>
+      <li><a class="u-text-primary u-body-text" href="list.html">19 Lists</a></li>
     </ul>
   </section>
 
