Add footer and navbar design system

--- a/footer.html
+++ b/footer.html
@@ -76,6 +76,21 @@
   <!-- Spacing properties -->
   <div class="design-system-content u-bg-secondary">
 
+    <div class="c-card">
+      <footer class="l-flex ">
+        <div>
+            <h3>Address</h3>
+            <p>1234 Street Name, City, Country</p>
+            <h3>Email</h3>
+            <p>contact@example.com</p>
+            <h3>Phone</h3>
+            <p>+1 234 567 8900</p>
+        </div>
+
+        <h4>© 2024 Outback Nursery. All rights reserved.</h4>
+    </footer>
+    </div>
+
   </div>
 
   <script src="./design-system.js"></script>
