--- a/navbar.html
+++ b/navbar.html
@@ -76,6 +76,26 @@
   <!-- Spacing properties -->
   <div class="design-system-content u-bg-secondary">
 
+    <div class="c-card">
+
+        <nav class="u-font-montserrat u-font-semibold">
+            <a href="/index.html" class="logo-container">
+                <img class="logo" src="images/logo.png" alt="outback nursery logo">
+            </a>
+            <input type="checkbox" id="check">
+            <label for="check" class="hamburger-btn">
+                <i class="fas fa-bars"></i>
+            </label>
+            <ul class="u-text-primary nav-list u-bg-primary">
+                <li><a href="/coming-soon.html">about us</a></li>
+                <li><a href="/coming-soon.html">plants</a></li>
+                <li><a href="/coming-soon.html">additional products</a></li>
+                <li><a href="/coming-soon.html">social & news</a></li>
+            </ul>
+        </nav>
+
+    </div>
+
   </div>
 
   <script src="./design-system.js"></script>
