--- a/cards.html
+++ b/cards.html
@@ -74,7 +74,41 @@
 
 
   <!-- Spacing properties -->
-  <div class="design-system-content u-bg-secondary">
+  <div class="design-system-content l-py-1">
+
+    <div class="section-combo">
+
+      <section class="c-card l-flex l-flex-col l-justify-center u-bg-primary l-align-center l-p l-m">
+        <figure class="card__image-container">
+          <img class="card_image"
+            src="https://images.unsplash.com/photo-1494253109108-2e30c049369b?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYyNDcwMTUwOQ&ixlib=rb-1.2.1&q=85"
+            alt="An orange painted blue, cut in half laying on a blue background" />
+        </figure>
+        <h2 class="l-my-1">Card With Image</h2>
+        <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+          tempor
+          incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo consequat.</p>
+
+      </section>
+
+      <section class="c-card l-flex l-flex-col l-justify-center u-bg-primary l-align-center l-p l-m">
+        <h2 class="l-my-1">Card Without Image</h2>
+        <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+          tempor
+          incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo consequat.</p>
+
+
+      </section>
+
+    </div>
+
+
+
+
 
   </div>
 
