Create forms html file

--- a/accordin.html
+++ b/accordin.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>images</title>
+  <title>Accordion</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
   <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
 
   <!-- Navbar -->
   <header>
-    <nav class="u-font-montserrat u-font-semibold">
+    <nav class="nav u-font-montserrat u-font-semibold">
       <a href="/index.html" class="logo-container">
         <img class="logo" src="images/logo.png" alt="outback nursery logo">
       </a>
@@ -73,8 +73,7 @@
   </section>
 
 
-  <!-- Spacing properties -->
-  <div class="design-system-content u-bg-secondary">
+  <div class="design-system-content">
 
 
     <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
