--- a/forms.html
+++ b/forms.html
@@ -15,7 +15,7 @@
 
   <!-- Navbar -->
   <header>
-    <nav class="u-font-montserrat u-font-semibold">
+    <nav class="nav u-font-montserrat u-font-semibold">
       <a href="/index.html" class="logo-container">
         <img class="logo" src="images/logo.png" alt="outback nursery logo">
       </a>
@@ -72,8 +72,25 @@
     </ul>
   </section>
 
-  <!-- Spacing properties -->
-  <div class="design-system-content u-bg-secondary">
+
+  <div class="design-system-content">
+
+      <div class="form-container c-card l-flex l-flex-col l-justify-center l-align-center l-p contact-bg">
+          <h2 class="l-my-1">Get In Touch</h2>
+
+
+          <input type="text" id="exampleInput" name="exampleInput" placeholder="Name">
+
+          <input type="text" id="exampleInput" name="exampleInput" placeholder="Email">
+          <input type="text" id="exampleInput" name="exampleInput" placeholder="Message">
+
+          <div class="l-flex l-flex-col l-justify-center l-align-center">
+              <a href="#" class="button l-p u-font-bold">Submit</a>
+          </div>
+
+      </div>
+
+
 
   </div>
 
