--- a/cards.html
+++ b/cards.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>images</title>
+  <title>Cards</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
   <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
 
   <!-- Navbar -->
   <header>
-    <nav class="u-font-montserrat u-font-semibold">
+    <nav class="nav u-font-montserrat u-font-semibold">
       <a href="/index.html" class="logo-container">
         <img class="logo" src="images/logo.png" alt="outback nursery logo">
       </a>
