--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Navigation -->
     <header>
-        <nav class="u-font-montserrat u-font-semibold">
+        <nav class="nav u-font-montserrat u-font-semibold">
             <a href="/index.html" class="logo-container">
                 <img class="logo" src="images/logo.png" alt="outback nursery logo">
             </a>
