--- a/list.html
+++ b/list.html
@@ -15,7 +15,7 @@
 
   <!-- Navbar -->
   <header>
-    <nav class="u-font-montserrat u-font-semibold">
+    <nav class="nav u-font-montserrat u-font-semibold">
       <a href="/index.html" class="logo-container">
         <img class="logo" src="images/logo.png" alt="outback nursery logo">
       </a>
@@ -31,7 +31,7 @@
     </nav>
   </header>
 
-  <section class="sidebar u-bg-white">
+  <section class="sidebar u-bg-secondary">
     <h2 class="sidebar_item u-text-secondary u-heading">Branding</h2>
     <ul class="sidebar_item">
       <li><a class="u-text-primary u-body-text" href="colors.html">01 Colours</a></li>
