--- a/typography.html
+++ b/typography.html
@@ -15,7 +15,7 @@
 
   <!-- Navbar -->
   <header>
-    <nav class="u-font-montserrat u-font-semibold">
+    <nav class="nav u-font-montserrat u-font-semibold">
       <a href="/index.html" class="logo-container">
         <img class="logo" src="images/logo.png" alt="outback nursery logo">
       </a>
