Update h2 and h3 size

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section class="hero-bg l-p l-flex l-justify-center l-align-center">
         <div class="white-overlay c-card-hero l-flex l-flex-col l-justify-center l-align-center l-p text-center">
-            <h1 class="l-my-1 u-hero-headline">Welcome To Outback Nursery</h1>
+            <h1 class="l-my-1 u-heading u-hero-headline">Welcome To Outback Nursery</h1>
             <div class="hero-container l-flex l-flex-col l-justify-center l-align-center l-p text-center">
                 <p class="hero-p ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt
