Update sidebar html and copied across different pages

--- a/footer.html
+++ b/footer.html
@@ -24,14 +24,42 @@
         <i class="fas fa-bars"></i>
       </label>
       <ul class="u-text-primary nav-list u-bg-primary">
-        <li><a href="/about-me.html">about me</a></li>
-        <li><a href="/index.html">Demo Site</a></li>
+        <li><a href="./about-me.html">about me</a></li>
+        <li><a href="./index.html">Demo Site</a></li>
+
+        <div class="sidebar-mobile">
+
+          <li><a href="./colors.html">Colours</a></li>
+          <li><a href="./typography.html">Typography</a></li>
+          <li><a href="./logo.html">Logo</a></li>
+
+        <li><a href="./spacing.html">Spacing</a></li>
+        <li><a href="./containers.html">Containers</a></li>
+        <li><a href="./images.html">Images</a></li>
+        <li><a href="#">Interactive</a></li>
+        <li><a href="#">Pages</a></li>
+
+        <li><a href="./navbar.html">Navbar</a></li>
+        <li><a href="#">Breadcrumbs</a></li>
+        <li><a href="#">Pagination</a></li>
+
+        <li><a href="./hero.html">Hero</a></li>
+        <li><a href="./carousel.html">Carousel</a></li>
+        <li><a href="#">Slats</a></li>
+        <li><a href="./footer.html">Footer</a></li>
+
+        <li><a href="./cards.html">Cards</a></li>
+        <li><a href="./footer.html">Forms</a></li>
+        <li><a href="./accordin.html">Accordion</a></li>
+        <li><a href="./list.html">Lists</a></li>
+
+      </div>
 
       </ul>
     </nav>
   </header>
 
-  <section class="sidebar u-bg-white">
+  <section class="sidebar-desktop u-bg-white">
     <h2 class="sidebar_item u-text-secondary u-heading">Branding</h2>
     <ul class="sidebar_item">
       <li><a class="u-text-primary u-body-text" href="colors.html">01 Colours</a></li>
@@ -71,6 +99,7 @@
       <li><a class="u-text-primary u-body-text" href="list.html">19 Lists</a></li>
     </ul>
   </section>
+
 
 
   <!-- Spacing properties -->
