Update hover style

--- a/about-me.html
+++ b/about-me.html
@@ -24,7 +24,7 @@
         <i class="fas fa-bars"></i>
       </label>
       <ul class="u-text-primary nav-list u-bg-primary">
-        <li><a href="./about-me.html">about me</a></li>
+        <li><a class="active" href="./about-me.html">about me</a></li>
         <li><a href="./index.html">Demo Site</a></li>
 
         <div class="sidebar-mobile">
