Update margin and padding

--- a/about-me.html
+++ b/about-me.html
@@ -24,7 +24,7 @@
         <i class="fas fa-bars"></i>
       </label>
       <ul class="u-text-primary nav-list u-bg-primary">
-        <li><a class="active" href="./about-me.html">about me</a></li>
+        <li><a href="./about-me.html">about me</a></li>
         <li><a href="./index.html">Demo Site</a></li>
 
         <div class="sidebar-mobile">
@@ -59,52 +59,54 @@
     </nav>
   </header>
 
-  <section class="sidebar-desktop u-bg-white">
-    <h2 class="sidebar_item u-text-secondary u-heading">Branding</h2>
-    <ul class="sidebar_item">
-      <li><a class="u-text-primary u-body-text" href="colors.html">01 Colours</a></li>
-      <li><a class="u-text-primary u-body-text" href="typography.html">02 Typography</a></li>
-      <li><a class="u-text-primary u-body-text" href="logo.html">03 Logo</a></li>
+  <section class="sidebar-desktop">
+    <h2 class="u-text-white u-heading">Branding</h2>
+    <ul>
+      <li><a class="u-text-white u-body-text" href="colors.html">01 Colours</a></li>
+      <li><a class="u-text-white u-body-text" href="typography.html">02 Typography</a></li>
+      <li><a class="u-text-white u-body-text" href="logo.html">03 Logo</a></li>
     </ul>
 
-    <h2 class="sidebar_item u-text-secondary u-heading">Utilities</h2>
-    <ul class="sidebar_item">
-      <li><a class="u-text-primary u-body-text active-page" href="spacing.html">04 Spacing</a></li>
-      <li><a class="u-text-primary u-body-text" href="containers.html">05 Containers</a></li>
-      <li><a class="u-text-primary u-body-text" href="images.html">06 Images</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">07 Interactive</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">08 Pages</a></li>
+    <h2 class="u-text-white u-heading l-mt-1">Utilities</h2>
+    <ul >
+      <li><a class="u-text-white u-body-text" href="spacing.html">04 Spacing</a></li>
+      <li><a class="u-text-white u-body-text" href="containers.html">05 Containers</a></li>
+      <li><a class="u-text-white u-body-text" href="images.html">06 Images</a></li>
+      <li><a class="u-text-white u-body-text" href="#">07 Interactive</a></li>
+      <li><a class="u-text-white u-body-text" href="#">08 Pages</a></li>
     </ul>
 
-    <h2 class="sidebar_item u-text-secondary u-heading">Navigation</h2>
-    <ul class="sidebar_item">
-      <li><a class="u-text-primary u-body-text" href="navbar.html">09 Navbar</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">10 Breadcrumbs</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">11 Pagination</a></li>
+    <h2 class="u-text-white u-heading l-mt-1">Navigation</h2>
+    <ul>
+      <li><a class="u-text-white u-body-text" href="navbar.html">09 Navbar</a></li>
+      <li><a class="u-text-white u-body-text" href="#">10 Breadcrumbs</a></li>
+      <li><a class="u-text-white u-body-text" href="#">11 Pagination</a></li>
     </ul>
 
-    <h2 class="sidebar_item u-text-secondary u-heading">Blocks</h2>
-    <ul class="sidebar_item">
-      <li><a class="u-text-primary u-body-text" href="hero.html">12 Hero</a></li>
-      <li><a class="u-text-primary u-body-text" href="carousel.html">13 Carousel</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">14 Slats</a></li>
-      <li><a class="u-text-primary u-body-text" href="footer.html">15 Footer</a></li>
+    <h2 class="u-text-white u-heading l-mt-1">Blocks</h2>
+    <ul>
+      <li><a class="u-text-white u-body-text" href="hero.html">12 Hero</a></li>
+      <li><a class="u-text-white u-body-text" href="carousel.html">13 Carousel</a></li>
+      <li><a class="u-text-white u-body-text" href="#">14 Slats</a></li>
+      <li><a class="u-text-white u-body-text" href="footer.html">15 Footer</a></li>
     </ul>
 
-    <h2 class="sidebar_item u-text-secondary u-heading">Components</h2>
-    <ul class="sidebar_item">
-      <li><a class="u-text-primary u-body-text" href="cards.html">16 Cards</a></li>
-      <li><a class="u-text-primary u-body-text" href="footer.html">17 Forms</a></li>
-      <li><a class="u-text-primary u-body-text" href="accordin.html">18 Accordion</a></li>
-      <li><a class="u-text-primary u-body-text" href="list.html">19 Lists</a></li>
+    <h2 class="u-text-white u-heading l-mt-1">Components</h2>
+    <ul>
+      <li><a class="u-text-white u-body-text" href="cards.html">16 Cards</a></li>
+      <li><a class="u-text-white u-body-text" href="footer.html">17 Forms</a></li>
+      <li><a class="u-text-white u-body-text" href="accordin.html">18 Accordion</a></li>
+      <li><a class="u-text-white u-body-text" href="list.html">19 Lists</a></li>
     </ul>
   </section>
 
 
 
  
-  <div class="design-system-content l-py-1">
-    <section>
+  <div class="design-system-content u-bg-white max-width-desktop">
+    
+    <section class="c-card l-mx-1 l-p">
+
       <h1 class="u-heading-1 u-text-secondary">Hi! My name is Abhiram Shaji</h1>
       <h2 class="u-heading-2 u-text-primary">I am an Android / Web developer.</h2>
 
@@ -133,7 +135,9 @@
         <li class="u-body-text u-text-primary">Patient</li>
         <li class="u-body-text u-text-primary">Stress Management</li>
       </ul>
+
     </section>
+
   </div>
 
   <script src="./design-system.js"></script>
