--- a/colors.html
+++ b/colors.html
@@ -59,70 +59,70 @@
     </nav>
   </header>
 
-  <section class="sidebar-desktop u-bg-white">
-    <h2 class="sidebar_item u-text-secondary u-heading">Branding</h2>
-    <ul class="sidebar_item">
-      <li><a class="u-text-primary u-body-text" href="colors.html">01 Colours</a></li>
-      <li><a class="u-text-primary u-body-text" href="typography.html">02 Typography</a></li>
-      <li><a class="u-text-primary u-body-text" href="logo.html">03 Logo</a></li>
+  <section class="sidebar-desktop">
+    <h2 class="u-text-white u-heading">Branding</h2>
+    <ul>
+      <li><a class="u-text-white u-body-text" href="colors.html">01 Colours</a></li>
+      <li><a class="u-text-white u-body-text" href="typography.html">02 Typography</a></li>
+      <li><a class="u-text-white u-body-text" href="logo.html">03 Logo</a></li>
     </ul>
 
-    <h2 class="sidebar_item u-text-secondary u-heading">Utilities</h2>
-    <ul class="sidebar_item">
-      <li><a class="u-text-primary u-body-text active-page" href="spacing.html">04 Spacing</a></li>
-      <li><a class="u-text-primary u-body-text" href="containers.html">05 Containers</a></li>
-      <li><a class="u-text-primary u-body-text" href="images.html">06 Images</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">07 Interactive</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">08 Pages</a></li>
+    <h2 class="u-text-white u-heading l-mt-1">Utilities</h2>
+    <ul >
+      <li><a class="u-text-white u-body-text" href="spacing.html">04 Spacing</a></li>
+      <li><a class="u-text-white u-body-text" href="containers.html">05 Containers</a></li>
+      <li><a class="u-text-white u-body-text" href="images.html">06 Images</a></li>
+      <li><a class="u-text-white u-body-text" href="#">07 Interactive</a></li>
+      <li><a class="u-text-white u-body-text" href="#">08 Pages</a></li>
     </ul>
 
-    <h2 class="sidebar_item u-text-secondary u-heading">Navigation</h2>
-    <ul class="sidebar_item">
-      <li><a class="u-text-primary u-body-text" href="navbar.html">09 Navbar</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">10 Breadcrumbs</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">11 Pagination</a></li>
+    <h2 class="u-text-white u-heading l-mt-1">Navigation</h2>
+    <ul>
+      <li><a class="u-text-white u-body-text" href="navbar.html">09 Navbar</a></li>
+      <li><a class="u-text-white u-body-text" href="#">10 Breadcrumbs</a></li>
+      <li><a class="u-text-white u-body-text" href="#">11 Pagination</a></li>
     </ul>
 
-    <h2 class="sidebar_item u-text-secondary u-heading">Blocks</h2>
-    <ul class="sidebar_item">
-      <li><a class="u-text-primary u-body-text" href="hero.html">12 Hero</a></li>
-      <li><a class="u-text-primary u-body-text" href="carousel.html">13 Carousel</a></li>
-      <li><a class="u-text-primary u-body-text" href="#">14 Slats</a></li>
-      <li><a class="u-text-primary u-body-text" href="footer.html">15 Footer</a></li>
+    <h2 class="u-text-white u-heading l-mt-1">Blocks</h2>
+    <ul>
+      <li><a class="u-text-white u-body-text" href="hero.html">12 Hero</a></li>
+      <li><a class="u-text-white u-body-text" href="carousel.html">13 Carousel</a></li>
+      <li><a class="u-text-white u-body-text" href="#">14 Slats</a></li>
+      <li><a class="u-text-white u-body-text" href="footer.html">15 Footer</a></li>
     </ul>
 
-    <h2 class="sidebar_item u-text-secondary u-heading">Components</h2>
-    <ul class="sidebar_item">
-      <li><a class="u-text-primary u-body-text" href="cards.html">16 Cards</a></li>
-      <li><a class="u-text-primary u-body-text" href="footer.html">17 Forms</a></li>
-      <li><a class="u-text-primary u-body-text" href="accordin.html">18 Accordion</a></li>
-      <li><a class="u-text-primary u-body-text" href="list.html">19 Lists</a></li>
+    <h2 class="u-text-white u-heading l-mt-1">Components</h2>
+    <ul>
+      <li><a class="u-text-white u-body-text" href="cards.html">16 Cards</a></li>
+      <li><a class="u-text-white u-body-text" href="footer.html">17 Forms</a></li>
+      <li><a class="u-text-white u-body-text" href="accordin.html">18 Accordion</a></li>
+      <li><a class="u-text-white u-body-text" href="list.html">19 Lists</a></li>
     </ul>
   </section>
 
 
 
-  <!-- Spacing properties -->
-  <div class="design-system-content u-bg-secondary">
-    <section class="">
+  <!-- Color -->
+  <div class="design-system-content u-bg-white max-width-desktop">
+
       <!-- Background Colors -->
-      <div class="c-card l-my-1">
+      <div class="c-card l-p l-m u-bg-white ">
         <h2>Background</h2>
-        <div class="c-card l-m u-bg-primary u-text-primary">
+        <div class="c-card l-m u-bg-primary u-text-primary l-p">
           <p>Primary Background</p>
           <p>Class name : .u-bg-primary</p>
           <p>Hex Code: #faeee7</p>
           <p>Uses: Backgrounds</p>
         </div>
 
-        <div class="c-card l-m u-bg-secondary u-text-primary">
+        <div class="c-card l-m u-bg-secondary u-text-primary l-p">
           <p>Secondary Background</p>
           <p>Class name : .u-bg-secondary</p>
           <p>Hex Code: #c3f0ca</p>
           <p>Uses: Navbar and sides</p>
         </div>
 
-        <div class="c-card l-m u-bg-white u-text-primary">
+        <div class="c-card l-m u-bg-white u-text-primary l-p">
           <p>White Background</p>
           <p>Class name : .u-bg-white</p>
           <p>Hex Code: #fffffe</p>
@@ -132,16 +132,16 @@
       </div>
 
       <!-- Font Colors -->
-      <div class="c-card l-my-1">
+      <div class="c-card l-m l-p ">
         <h2>Texts</h2>
-        <div class="c-card l-m u-bg-primary u-text-primary">
+        <div class="c-card l-m u-bg-primary u-text-primary l-p">
           <p>Primary Text</p>
           <p>Class name : .u-text-primary</p>
           <p>Hex Code: #594a4e</p>
           <p>Uses: Paragraphs</p>
         </div>
 
-        <div class="c-card l-m u-bg-primary u-text-secondary">
+        <div class="c-card l-m u-bg-primary u-text-secondary l-p">
           <p>Secondary Text</p>
           <p>Class name : .u-text-secondary</p>
           <p>Hex Code: #33272a</p>
@@ -150,16 +150,16 @@
       </div>
 
       <!-- Accent Colors -->
-      <div class="c-card l-my-1">
+      <div class="c-card l-m l-p">
         <h2>Accent</h2>
-        <div class="c-card l-m u-accent u-text-secondary">
+        <div class="c-card l-m u-accent u-text-secondary l-p">
           <p>Primary Background</p>
           <p>Class name : .u-accent</p>
           <p>Hex Code: #ff8ba7</p>
           <p>Uses: Headings and button text</p>
         </div>
 
-        <div class="c-card l-m u-accent-light u-text-secondary">
+        <div class="c-card l-m u-accent-light u-text-secondary  l-p">
           <p>Primary Background</p>
           <p>Class name : .u-accent-light</p>
           <p>Hex Code: #ffc6c7</p>
@@ -168,58 +168,58 @@
       </div>
 
       <!-- Color Contrast -->
-      <div class="c-card l-my-1">
+      <div class="c-card l-m  l-p">
         <h2>Color Contrast</h2>
-        <div class="c-card l-m u-bg-primary u-text-primary">
+        <div class="c-card l-m u-bg-primary u-text-primary l-p">
           <p>Primary Background</p>
           <p>Primary text</p>
           <p>Contrast Ratio : 7.33:1 Pass </p>
         </div>
 
-        <div class="c-card l-m u-bg-secondary u-text-primary">
+        <div class="c-card l-m u-bg-secondary u-text-primary l-p">
           <p>Secondary Background</p>
           <p>Primary text</p>
           <p>Contrast Ratio : 6.61:1 Pass </p>
         </div>
 
-        <div class="c-card l-m u-bg-primary u-text-secondary">
+        <div class="c-card l-m u-bg-primary u-text-secondary l-p">
           <p>Primary Background</p>
           <p>Secondary text</p>
           <p>Contrast Ratio : 12.59:1 Pass </p>
         </div>
 
-        <div class="c-card l-m u-bg-secondary u-text-secondary">
+        <div class="c-card l-m u-bg-secondary u-text-secondary l-p">
           <p>Secondary Background</p>
           <p>Secondary text</p>
           <p>Contrast Ratio : 11.36:1 Pass </p>
         </div>
 
-        <div class="c-card l-m u-bg-white u-text-primary">
+        <div class="c-card l-m u-bg-white u-text-primary l-p">
           <p>White Background</p>
           <p>Primary text</p>
           <p>Contrast Ratio : 8.34:1 Pass </p>
         </div>
 
-        <div class="c-card l-m u-bg-white u-text-secondary">
+        <div class="c-card l-m u-bg-white u-text-secondary l-p">
           <p>White Background</p>
           <p>Secondary text</p>
           <p>Contrast Ratio : 14.33:1 Pass </p>
         </div>
 
-        <div class="c-card l-m u-accent u-text-secondary">
+        <div class="c-card l-m u-accent u-text-secondary l-p">
           <p>Accent Background</p>
           <p>Secondary text</p>
           <p>Contrast Ratio : 6.48:1 </p>
         </div>
 
-        <div class="c-card l-m u-accent-light u-text-secondary">
+        <div class="c-card l-m u-accent-light u-text-secondary l-p">
           <p>Accent Light Background</p>
           <p>Secondary text</p>
           <p>Contrast Ratio : 9.66:1 </p>
         </div>
 
       </div>
-    </section>
+
   </div>
 
   <script src="./design-system.js"></script>
