--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="u-bg-secondary l-flex l-flex-col l-justify-center l-align-center l-px-1 l-pt-1">
 
-        <div class="section-combo l-m">
+        <div class="section-combo l-my-1">
 
             <!-- Explore Section -->
             <section
@@ -96,7 +96,7 @@
     <div class="u-bg-secondary l-flex l-flex-col l-justify-center l-align-center l-px-1">
 
         <!-- Gift Card Section -->
-        <div class="section-combo l-m">
+        <div class="section-combo l-my-1">
 
             <section
                 class="max-heright-desktop giftcard-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p">
@@ -137,21 +137,25 @@
 
     <!-- Get in touch form-->
 
-    <div class="u-bg-secondary l-flex l-flex-col l-justify-center l-align-center l-p l-mx-1">
+    <div class="u-bg-secondary l-flex l-flex-col l-justify-center l-align-center l-px-1">
+        <div class="l-w-100 l-flex l-flex-col l-justify-center l-align-center form-container-max">
 
-        <div class="contact-bg l-w-100 c-card l-flex l-flex-col l-justify-center l-align-center form-container-max l-p">
+            <div
+                class="contact-bg l-w-100 c-card l-flex l-flex-col l-justify-center l-align-center form-container-max l-p">
 
-            <div class="form-container l-w-100 l-m l-flex l-flex-col l-justify-center l-align-center">
-                <h2 class="l-my-1 u-heading-1">Get In Touch</h2>
+                <div class="form-container l-w-100 l-m l-flex l-flex-col l-justify-center l-align-center">
+                    <h2 class="l-my-1 u-heading-1">Get In Touch</h2>
 
 
-                <input type="text" class="l-w-100" id="exampleInput" name="exampleInput" placeholder="Name">
+                    <input type="text" class="l-w-100" id="exampleInput" name="exampleInput" placeholder="Name">
 
-                <input type="text" class="l-w-100" id="exampleInput" name="exampleInput" placeholder="Email">
-                <input type="text" class="l-w-100" id="exampleInput" name="exampleInput" placeholder="Message">
+                    <input type="text" class="l-w-100" id="exampleInput" name="exampleInput" placeholder="Email">
+                    <input type="text" class="l-w-100" id="exampleInput" name="exampleInput" placeholder="Message">
 
-                <div class="l-flex l-flex-col l-justify-center l-align-center l-mt-1">
-                    <a href="#" class="button l-p u-font-bold">Submit</a>
+                    <div class="l-flex l-flex-col l-justify-center l-align-center l-mt-1">
+                        <a href="#" class="button l-p u-font-bold">Submit</a>
+                    </div>
+
                 </div>
 
             </div>
@@ -163,11 +167,11 @@
     <!-- testimonial Section -->
 
     <section class="u-bg-secondary l-flex l-flex-col l-justify-center l-align-center l-p">
-        <div class="form-container-max l-flex l-flex-col l-py-1 l-flex-row-desktop">
+        <div class="form-container-max l-flex l-flex-col l-py-1 l-flex-row-desktop l-w-100">
 
             <!-- Accordion Item 1 -->
             <div class="accordion-item testimonials-bg l-mb-1">
-                <button class="accordion-toggle u-heading u-heading-2"
+                <button class="accordion-toggle l-w-100 u-heading u-heading-2"
                     onclick="toggleAccordion('accordion-content-1', this)">
                     Mark Thompson
                     <i class="fas fa-chevron-down accordion-icon"></i>
@@ -186,7 +190,7 @@
 
             <!-- Accordion Item 2 -->
             <div class="accordion-item testimonials-bg l-mb-1">
-                <button class="accordion-toggle u-heading u-heading-2"
+                <button class="accordion-toggle u-heading u-heading-2 l-w-100"
                     onclick="toggleAccordion('accordion-content-2', this)">
                     Emily Jenkins
                     <i class="fas fa-chevron-down accordion-icon"></i>
@@ -204,7 +208,7 @@
 
             <!-- Accordion Item 3 -->
             <div class="accordion-item testimonials-bg l-mb-1">
-                <button class="accordion-toggle u-heading u-heading-2"
+                <button class="accordion-toggle u-heading u-heading-2 l-w-100"
                     onclick="toggleAccordion('accordion-content-3', this)">
                     Susan Harper
                     <i class="fas fa-chevron-down accordion-icon"></i>
@@ -231,8 +235,8 @@
     <footer class="l-flex">
         <div>
             <p class="u-body-text l-mb-1"><i class="fas fa-map-marker-alt l-px-1"></i>6016 Headquarters Rd
-                Courtenay,  British Columbia
-                V9J 1M7,  Canada
+                Courtenay, British Columbia
+                V9J 1M7, Canada
             </p>
             <p class="u-body-text l-mb-1"><i class="fas fa-envelope l-px-1"></i>info@outbacknursery.ca</p>
             <p class="u-body-text l-mb-1"><i class="fas fa-phone l-px-1"></i>+1 234 567 8900</p>
